FOF 3.0.18
================================================================================
~ Work around broken file scanners in cheap hosts. If you were affected SWITCH HOSTS IMMEDIATELY, YOUR HOST IS BROKEN BEYOND REPAIR.

FOF 3.0.17
================================================================================
~ Fixed packaging error

FOF 3.0.16
================================================================================
# [HIGH] Checking against method ACL rules (&something) returning an event alias (@whatever) always returns true without evaluating the event alias
# [MEDIUM] Joomla returns null instead of false in some ACL checks
# [LOW] gh-637 The empty_replacement was untranslated in Calendar and Email fields

FOF 3.0.15
================================================================================
# [MEDIUM] Relations: an empty string foreign key could possibly result in memory exhaustion or at least the wrong related record reported. Now it is treated the same as null (no related records are returned).
# [HIGH] The form's show_filters must only control the appearance of sidebar filters, not the filters at the top of the form (DO NOT USE SEARCHABLE FIELDS IF YOU DON'T WANT THESE FILTERS!)

FOF 3.0.14
================================================================================
! Incompatible with PHP 5.4 or earlier (old versions of PHP don't allow integer typecasting inside `empty()`)

FOF 3.0.13
================================================================================
! mcrypt is deprecated in PHP 7.1. Replacing it with OpenSSL.
+ Relation Form Field now has a "model" attribute for cases when the field name is not the same of the model class name (ie: company_types vs CompanyTypes)
+ Ability to enable / disable drag'n'drop reordering in Ordering fields because of a bug in Joomla! 3.5+ they don't want to fix (I submitted the PR and they rejected it)